// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should not render null (0) deltas > null-like-deltas 1`] = `
<div
  data-testid="null-countdown"
>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          year
        </h4>
      </div>
    </div>
  </div>
  ,
</div>
`;

exports[`should render > single-date 1`] = `
<div
  data-testid="basic-countdown"
>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          year
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          1
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          month
        </h4>
      </div>
    </div>
  </div>
  ,
</div>
`;

exports[`should render plural duration > plural-date 1`] = `
<div
  data-testid="multiple-countdown"
>
  <div
    class="MuiBox-root css-kr4k96"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          2
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          years
        </h4>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation5 css-30kr64-MuiPaper-root"
    >
      <div
        class="MuiBox-root css-1erotlu"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-tatl18-MuiTypography-root"
        >
          2
        </h1>
        <h4
          class="MuiTypography-root MuiTypography-h4 css-g8o2ax-MuiTypography-root"
        >
          months
        </h4>
      </div>
    </div>
  </div>
  ,
</div>
`;
